--- a/Bandit/00.md
+++ b/Bandit/00.md
@@ -11,6 +11,8 @@ Port: `2220`<br>
 Username: `bandit0`<br>
 Password: `bandit0`<br>
 
+## Write Up:<br>
+
 In this, we just connect remotely to their server by using "ssh" with above username & password<br>
 Use `man ssh` for more details<br>
 
@@ -21,5 +23,5 @@ With<br>
 -p: port to connect<br>
 
 
-**Solution:**<br>
+## Solution:<br>
 Command: `ssh  bandit.labs.overthewire.org -l bandit0 -p 2220`
