--- a/Bandit/06.md
+++ b/Bandit/06.md
@@ -16,13 +16,13 @@ Password: `lrIWWI6bB37kxfiCQZqUdOIYfr6eEeqR`<br>
 
 ## Write Up:<br>
 
-In this, we need to find the file which meets the given requirement in <b>inhere</b> Dir<br>
-Use man find for more details<br>
+In this, we need to find the file which meets the given requirement in <b>inhere</b> directory<br>
+Use `man find` for more details<br>
 
 ## Solution:<br>
 :one: Find the file Command: `find ./inhere -readable -size 1033c \! -executable`<br>
     &emsp;&emsp;`\!`: negative flag<br>
-:two: Cat ".hidden" file Command: `cat ./inhere/maybehere07/.file2`<br>
+:two: Read ".hidden" file Command: `cat ./inhere/maybehere07/.file2`<br>
 
 ## Next Level: :next_track_button:<br>
 :key: Password: <b>P4L4vucdmLnm8I7Vl7jG1ApGSfjYKqJU</b>
